# iqama-times

./: .gitignore  LICENSE  README.md  Untitled.ipynb  pyproject.toml  test.csv
iqama_times/: iqama_parser.py
tests/: test_iqama_parser.py
